--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,5 @@
 .page {
-  min-width: 1100px;
-  max-width: 1600px;
-  font-size: 16px;
-  line-height: 20px;
-  margin: auto;
-  font-family: "Helvetica Neue", Arial, sans-serif;
+  /* Add page class properties here */
 }
 
 .header {
@@ -19,24 +14,15 @@
 }
 
 .nav {
-  display: flex;
-  justify-content: space-between;
+  /* Add flex properties here */
 }
 
 .logo {
-  width: 196px;
-  height: 60px;
 }
 
 .nav__links {
-  display: flex;
-  column-gap: 20px;
-  flex-direction: row;
-  justify-content: space-evenly;
-  align-items: flex-start;
-  list-style-type: none;
+  /* Reset default list styles here */
   margin: 8px 0 0;
-  padding: 0px;
 }
 
 .nav__link {
@@ -46,26 +32,13 @@
 }
 
 .header__title {
-  display: flex;
-  font-size: 66px;
-  line-height: 76px;
-  font-weight: 500;
-  margin: 150px 0px 32px 0px;
-  max-width: 544px;
 }
 
 .header__description {
-  font-size: 20px;
-  line-height: 30px;
-  margin: 32px 0 0;
-  max-width: 532px;
 }
 
 .header__image {
-  position: absolute;
-  max-width: 636px;
-  top: 135px;
-  right: 20px;
+  z-index: 1;
 }
 
 .header__footer {
@@ -85,141 +58,4 @@
 .header__address {
   margin: 0;
   color: #838383;
-}
-
-.events {
-  padding: 100px 0 120px 80px;
-  display: flex;
-  align-items: start;
-  justify-content: space-between;
-  box-sizing: border-box;
-  background-color: #f2f2f2;
-}
-
-.events__content {
-  flex-basis: 580px;
-}
-
-.events__heading {
-  font-size: 20px;
-  font-weight: 500;
-  line-height: 30px;
-  margin: 0;
-}
-
-.events__title {
-  font-size: 44px;
-  font-weight: 500;
-  line-height: 52px;
-  margin: 32px 0 0;
-}
-
-.events__info-section {
-  margin-top: 32px;
-}
-
-.event-info__item {
-  display: flex;
-  align-items: center;
-  margin-bottom: 4px;
-  font-weight: 500;
-}
-
-.event-info__icon {
-  background-repeat: no-repeat;
-  background-position: center;
-  margin-right: 12px;
-  width: 24px;
-  height: 24px;
-}
-
-.event-info__icon_type_calendar {
-  background-image: url(../images/icon_calendar.svg);
-}
-
-.event-info__icon_type_pin {
-  background-image: url(../images/icon_pin.svg);
-}
-
-.event-info__text {
-  font-size: 20px;
-  font-weight: 500;
-  line-height: 30px;
-  margin: 0;
-}
-
-.events__description {
-  margin: 40px 0 60px;
-}
-
-.events__more {
-  color: #2f80ed;
-  text-decoration: none;
-}
-
-.events__cover {
-  flex-grow: 1;
-  flex-shrink: 0;
-  flex-basis: 780px;
-  max-width: 780px;
-  position: relative;
-}
-
-.events__image {
-  max-width: 100%;
-}
-
-.person {
-  position: absolute;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  gap: 10px;
-}
-
-.person_name_feynman {
-  top: -30px;
-  left: 319px;
-}
-
-.person_name_burbidge {
-  top: 96px;
-  right: 125px;
-}
-
-.person_name_cannon {
-  right: 216px;
-  bottom: 18px;
-}
-
-.person_name_mitchell {
-  left: 142px;
-  bottom: 82px;
-}
-
-.person_name_tarter {
-  top: 79px;
-  left: 159px;
-}
-
-.person__image {
-  max-width: 100%;
-}
-
-.person__image_size_l {
-  width: 140px;
-}
-
-.person__image_size_m {
-  width: 100px;
-}
-
-.person__image_size_s {
-  width: 80px;
-}
-
-.person__caption {
-  text-align: center;
-  font-size: 14px;
-  margin: 0;
 }
