--- a/styles/style.css
+++ b/styles/style.css
@@ -170,7 +170,7 @@
   text-decoration: none;
 }
 
-.events_more:hover {
+.events__more:hover {
   color: #1f69c9;
 }
 
@@ -277,7 +277,7 @@
   z-index: -1;
 }
 
-.staff-container {
+.staff__cards {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
