--- a/styles/style.css
+++ b/styles/style.css
@@ -3,7 +3,7 @@
   max-width: 1600px;
   font-size: 16px;
   line-height: 20px;
-  margin: auto;
+  margin: 0 auto;
   font-family: "Helvetica Neue", Arial, sans-serif;
 }
 
