--- a/styles/style.css
+++ b/styles/style.css
@@ -21,6 +21,7 @@
 .nav {
   display: flex;
   justify-content: space-between;
+  align-items: flex-start;
 }
 
 .logo {
@@ -33,10 +34,10 @@
   column-gap: 20px;
   flex-direction: row;
   justify-content: space-evenly;
-  align-items: flex-start;
   list-style-type: none;
+  column-gap: 20px;
   margin: 8px 0 0;
-  padding: 0px;
+  padding: 0;
 }
 
 .nav__link {
@@ -54,7 +55,7 @@
   font-size: 66px;
   line-height: 76px;
   font-weight: 500;
-  margin: 150px 0px 32px 0px;
+  margin: 150px 0 0;
   max-width: 544px;
 }
 
@@ -66,19 +67,14 @@
 }
 
 .header__image {
-  z-index: 1;
-  position: absolute;
   max-width: 636px;
+  position: absolute;
   top: 135px;
   right: 20px;
 }
 
 .header__footer {
   margin-top: auto;
-  position: absolute;
-  left: 0;
-  bottom: 40px;
-  padding: 40px 80px 0;
   width: 100%;
   display: flex;
   align-items: center;
@@ -268,23 +264,13 @@
   color: #ffffff;
 }
 
-.background-image {
-  position: relative;
-  background-repeat: repeat;
-  width: 100%;
-  height: 100%;
-  background-size: cover;
-  z-index: -1;
-}
-
 .staff__cards {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: space-between;
   max-width: 760px;
-  padding-top: 68px;
-  margin-right: auto;
-  margin-left: auto;
+  padding: 68px 0 0;
+  margin: 0;
   z-index: 1;
   row-gap: 40px;
   column-gap: 40px;
@@ -304,8 +290,7 @@
   width: 100%;
   height: 100%;
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+  flex-direction: column;
 }
 
 .card__title {
@@ -332,6 +317,10 @@
 .membership {
   padding: 100px 0 140px;
   background-color: #f2f2f2;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .membership__title {
@@ -341,17 +330,15 @@
   font-size: 44px;
   font-weight: 500;
   line-height: 52px;
-  padding-bottom: 40px;
 }
 
 .membership__steps {
   list-style-type: none;
   padding: 0;
-  padding-top: 40px;
-  margin: 0;
+  margin: 100px 0 0;
   display: flex;
   flex-basis: auto;
-  row-gap: 40px;
+  column-gap: 40px;
   justify-content: space-around;
   flex-direction: row;
 }
@@ -359,7 +346,7 @@
 .step {
   display: flex;
   flex-direction: column;
-  width: 220px;
+  flex-basis: 220px;
 }
 
 .step__title {
@@ -387,7 +374,6 @@
   color: #fff;
   overflow: hidden;
   position: relative;
-  box-sizing: border-box;
   display: flex;
 }
 
@@ -406,8 +392,19 @@
   line-height: 30px;
   font-weight: 400;
   max-width: 660px;
-  column-gap: 32px;
   z-index: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+.about__paragraph {
+  display: flex;
+  margin: 0;
+  margin-bottom: 32px;
+}
+
+.about__paragraph:not(:last-child) {
+  margin-bottom: 32px;
 }
 
 .about__circle {
@@ -483,5 +480,5 @@
 }
 
 .footer__copyright {
-  margin: 108px 0 60px 40px;
+  margin: 108px 0 80px 40px;
 }
